--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,11 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
 
 #Application Properties (setup paths to files)
-image.static.path =src/main/resources/static/bird_pictures/
-local_analysis.static.path =D:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\local_analysis.py
-modeldir.static.path =D:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\saved_models\\vgg19\\001
+local_analysis.static.path =C:\\Users\\Downloads\\ProtoPNet\\local_analysis.py
+modeldir.static.path =C:\\Users\\Downloads\\ProtoPNet\\saved_models\\vgg19\\001
 model.static.path =./100_0push0.7411.pth
-images_direct.static.path =D:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\CUB_200_2011\\train_cropped\\
+images_direct.static.path =C:\\Users\\Downloads\\ProtoPNet\\CUB_200_2011\\train_cropped\\
+feedback_csv.static.path = src/main/resources/feedback_data.csv
+
 
  
