add MongoDB configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
+# MongoDB Configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=admin
+
+
 # Enable JPA and Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
@@ -19,6 +25,5 @@ modeldir.static.path =C:\\Users\\Downloads\\ProtoPNet\\saved_models\\vgg19\\001
 model.static.path =./100_0push0.7411.pth
 images_direct.static.path =C:\\Users\\Downloads\\ProtoPNet\\CUB_200_2011\\train_cropped\\
 feedback_csv.static.path = src/main/resources/feedback_data.csv
-
 
  
