--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,13 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
 
 #Application Properties (setup paths to files)
-local_analysis.static.path =C:\\Users\\Downloads\\ProtoPNet\\local_analysis.py
-modeldir.static.path =C:\\Users\\Downloads\\ProtoPNet\\saved_models\\vgg19\\001
-model.static.path =./100_0push0.7411.pth
-images_direct.static.path =C:\\Users\\Downloads\\ProtoPNet\\CUB_200_2011\\train_cropped\\
-feedback_csv.static.path = src/main/resources/feedback_data.csv
 
- 
+local_analysis.static.path = F:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\local_analysis.py
+modeldir.static.path =F:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\saved_models\\vgg19\\001
+model.static.path =./100_0push0.7411.pth
+images_direct.static.path =F:\\Programowanie\\UJ\\TeamProject\\ProtoPNet\\CUB_200_2011\\train_cropped\\
+#feedback_csv.static.path = src/main/resources/feedback_data.csv
+
+
+
+
