--- a/react-protoPFeedback/package.json
+++ b/react-protoPFeedback/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "start": "^5.1.0",
+    "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
